name:                PlayingAtari
version:             0.1.0.0
synopsis:            A collection of RL_Glue components made to work with ALE
-- description:         
license:             Apache-2.0
license-file:        LICENSE
author:              Richard Alex Hofer
maintainer:          atomic.quark@gmail.com
-- copyright:           
category:            RL_Glue components
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable RandomAgent
  main-is:             RandomAgent.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8, rlglue >=0.2.1, bytestring, transformers >=0.3, random >=1.0
  hs-source-dirs:      src
  default-language:    Haskell2010

executable SimpleExperiment
  main-is:             SimpleExperiment.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8, rlglue >=0.2.1, bytestring, transformers >=0.3, random >=1.0,
                       network-simple
  hs-source-dirs:      src
  default-language:    Haskell2010
